# geometry-lib

./: .gitignore  LICENSE  Readme.md  pyproject.toml
geometry/: __init__.py  geometry.py
